--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.App-button {
+  color: blue;
+  font-size: 1.5rem;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
